# embedded-test

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  embedded-test.x
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report-or-problem.md
.github/test-projects/: step-executor.sh
.github/test-projects/esp32/: Cargo.toml  build.rs  build.sh  expected_rtt_logs.txt
.github/test-projects/esp32/.cargo/: config.toml
.github/test-projects/esp32/src/: main.rs
.github/test-projects/esp32/tests/: example_test.rs
.github/test-projects/nrf/: Cargo.toml  build.rs  expected_test_results.txt  memory-nrf51.x
.github/test-projects/nrf/.cargo/: config.toml
.github/test-projects/nrf/src/: main.rs
.github/test-projects/nrf/tests/: example_test.rs
.github/test-projects/stm32/: Cargo.toml  build.rs  build.sh  expected_rtt_logs.txt
.github/test-projects/stm32/.cargo/: config.toml
.github/test-projects/stm32/src/: main.rs
.github/test-projects/stm32/tests/: example_test.rs
.github/workflows/: changelog.yml  ci.yml  smoketest.yml  smoketest_master.yml
examples/esp32c6/: Cargo.toml  README.md  build.rs
examples/esp32c6/.cargo/: config.toml
examples/esp32c6/src/: apple.rs  banana.rs  lib.rs  main.rs
examples/esp32c6/tests/: async_test.rs  example_test.rs
examples/std/: Cargo.toml  README.md  build.rs
examples/std/.cargo/: config.toml
examples/std/src/: lib.rs  main.rs
examples/std/tests/: example_test.rs
examples/stm32f767/: Cargo.toml  README.md  build.rs  memory.x
examples/stm32f767/.cargo/: config.toml
examples/stm32f767/src/: lib.rs  main.rs
examples/stm32f767/tests/: example_test.rs
linker-script/: Cargo.toml  README.md  build.rs  embedded-test.x
linker-script/src/: lib.rs
macros/: Cargo.toml  README.md
macros/src/: attributes.rs  lib.rs
macros/src/attributes/: setup.rs  tests.rs
macros/src/attributes/tests/: codegen.rs  parse.rs  validate.rs
macros/src/attributes/tests/codegen/: call_test_fn.rs  export_sym.rs  test.rs  wrap_with_executor.rs
macros/src/attributes/tests/parse/: function_attributes.rs  items.rs  macro_args.rs  module.rs
macros/src/attributes/tests/validate/: function.rs  module.rs
src/: export.rs  fmt.rs  lib.rs  main.rs  semihosting.rs  semihosting_ext.rs  std.rs
tests-build/: Cargo.toml  README.md  build.rs
tests-build/cases/fail/: duplicate_setup.rs  duplicate_setup.stderr  embassy_custom_executor_not_enabled.rs  embassy_custom_executor_not_enabled.stderr  embassy_no_executor_passed_but_needed_for_init.rs  embassy_no_executor_passed_but_needed_for_test.rs  embassy_no_executor_passed_but_needed_for_test.stderr  embassy_not_enabled_on_init.rs  embassy_not_enabled_on_test.rs  embassy_not_enabled_on_test.stderr
tests-build/cases/fail/linker/: duplicate_setup.rs
tests-build/cases/fail/parse/function_attributes/: parse_test_attribute.rs  parse_test_attribute.stderr  parse_timeout_attribute.rs  parse_timeout_attribute.stderr
tests-build/cases/fail/parse/module/: inline_module.rs  inline_module.stderr
tests-build/cases/fail/setup/: invalid_attributes_along_setup.rs  invalid_attributes_along_setup.stderr
tests-build/cases/fail/validate/function/: both_init_and_test_attribute.rs  both_init_and_test_attribute.stderr  custom_init_func_ignore_attribute.rs  custom_init_func_ignore_attribute.stderr  custom_init_func_invalid_signature.rs  custom_init_func_invalid_signature.stderr  custom_init_func_should_panic_attribute.rs  custom_init_func_timeout_attribute.rs  embassy_not_enabled_on_custom_init.rs  embassy_not_enabled_on_init.rs  embassy_not_enabled_on_init.stderr  embassy_not_enabled_on_test.rs  init_func_ignore_attribute.rs  init_func_ignore_attribute.stderr  init_func_invalid_signature.rs  init_func_should_panic_attribute.rs  init_func_timeout_attribute.rs  test_func_invalid_signature.rs  test_func_invalid_signature.stderr  test_func_reference_in_signature.rs  test_func_reference_in_signature.stderr  unannotated_func_timeout_attribute.rs
tests-build/cases/fail/validate/module/: custom_init_does_not_return_state.rs  custom_init_does_not_return_state.stderr  custom_init_not_found.rs  custom_init_not_found.stderr  custom_init_state_does_not_match.rs  custom_init_state_does_not_match.stderr  duplicate_init.rs  duplicate_init.stderr  embassy_custom_executor_not_enabled.rs  embassy_no_executor_passed_but_needed_for_custom_init.rs  embassy_no_executor_passed_but_needed_for_init.rs  embassy_no_executor_passed_but_needed_for_test.rs  embassy_no_executor_passed_but_needed_for_test.stderr  init_does_not_return_state.rs  init_does_not_return_state.stderr  init_state_does_not_match.rs  init_state_does_not_match.stderr  no_init_provided.rs  no_init_provided.stderr
tests-build/cases/pass/: custom_init.rs  default_timeout.rs  duplicate_test_name_in_other_module.rs  embassy.rs  embassy_custom_executor.rs  setup.rs  simple_bin_test.rs  simple_integration_test.rs  simple_lib_test.rs  unannotated_function.rs
tests-build/src/: build_rs.rs  lib.rs  manifest.rs  workspace_manifest.rs
