[package]
name = "embedded-test"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/probe-rs/embedded-test"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "test", "testing", "test-runner", "test-framework"]
description = "A test harness and runner for embedded devices"
categories = ["embedded", "no-std", "development-tools::testing"]

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"

[dependencies]
semihosting = { version = "0.1.7", features = ["args"] }
embedded-test-macros = { version = "0.6.0", path = "./macros" }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.1" }
heapless = "0.8.0"

# Optional dependencies
defmt = { version = "0.3.8", optional = true }
log = { version = "0.4.20", optional = true }
embassy-executor = { version = "0.7.0", optional = true, default-features = false }


[features]
default = ["panic-handler"]

# defines a panic-handler which will invoke `semihosting::process::abort()` on panic
panic-handler = []

# prints testcase exit result to defmt
defmt = ["dep:defmt"]

# prints testcase exit result to log
log = ["dep:log"]

# Enables async test and init functions using embassy-executor.
# Note: You need to enable at least one executor feature on embassy unless you are using the `external-executor` feature
embassy = [
    "embedded-test-macros/embassy",
    "dep:embassy-executor",
]

# you will use your own executor by setting it via the `tasks` macro, e.g. `#[embedded_test::tests(executor = esp_hal::embassy::executor::thread::Executor::new())]`
external-executor = ["embedded-test-macros/external-executor"]

# Enables Ariel OS integration
ariel-os = ["embedded-test-macros/ariel-os", "embassy"]

# enables the xtensa-specific semihosting implementation
xtensa-semihosting = ["semihosting/openocd-semihosting"]
