[package]
name = "embedded-test-linker-script"
description = "Linker script for embedded-test"
version = "0.1.0-alpha.2"
edition = "2024"
repository = "https://github.com/probe-rs/embedded-test"
license = "MIT OR Apache-2.0"
links = "embedded-test-linker-script" # prevent multiple versions of the same crate

[dependencies]

[features]
std = []
