[package]
name = "embedded-test-macros"
description = "proc-macros for the embedded-test crate"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/probe-rs/embedded-test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }

[features]
embassy = []

[dev-dependencies]
trybuild = "1"
