[package]
name = "embedded-test-macros"
description = "proc-macros for the embedded-test crate"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/probe-rs/embedded-test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["extra-traits", "full"] }
darling = "0.20.8"

[features]
embassy = []
external-executor = []
ariel-os = []

[dev-dependencies]
trybuild = "1"
