[package]
name = "example-esp32c6"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/probe-rs/embedded-test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dependencies when using the log/defmt feature
log = { version = "0.4.20", optional = true }
defmt = { version = "1", optional = true }
rtt-target = { version = "0.6.1", optional = true }

# Esp32 related dependencies for main.rs. Note: embedded-test comes with its own panic handler and logging sink.
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c6", "unstable"] }
embassy-executor = { version = "0.7.0" }
embassy-time = { version = "0.4.0" }
esp-backtrace = { version = "0.17.0", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6"] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }

embedded-test-linker-script = { version = "0.1.0", path = "../../linker-script" }

[dev-dependencies]
embedded-test = { version = "0.6.0", features = ["embassy", "external-executor"], path = "../.." }

[features]
default = ["log"]
log = ["dep:log", "dep:rtt-target", "rtt-target/log", "embedded-test/log"]
defmt = ["dep:defmt", "dep:rtt-target", "rtt-target/defmt", "embedded-test/defmt"]

[[bin]]
name = "example-esp32c6"
test = false  # To make plain `cargo test` work: Disable tests for the bin, because we are only using the intergration tests
bench = false # To make `cargo check --all-targets` work.
required-features = ["log"]

[lib]
harness = false
bench = false

[[test]]
name = "example_test"
harness = false # Important: As we bring our own test harness, we need to disable the default one

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(abc)'] }
